# bachelorarbeit

./: docker_usage_log.sh
GoClient/: Dockerfile  compile_times.csv  docker-compose.yml  go.mod  resource_log.csv  test.bash  testCompose.bash
GoClient/src/: main.go
GoClient/test_data/: 1000kb_XML.xml  10kb_XML.xml  1500kb_JSON.json  50kb_JSON.json  small_ableton.xml
GoServer/: Dockerfile  docker-compose.yaml  go.mod
GoServer/src/: main.go
JavaClient/: Dockerfile  build.gradle  compile_times.csv  docker-compose.yaml  resource_log.csv  settings.gradle  test.bash
JavaClient/gradle/wrapper/: gradle-wrapper.properties
JavaClient/src/main/java/org/java/client/: JavaClient.java
JavaClient/test_data/: 1000kb_JSON.json  100kb_JSON.json  100kb_XML.xml  10kb_XML.xml
JavaServer/: Dockerfile  build.gradle  docker-compose.yaml
JavaServer/gradle/wrapper/: gradle-wrapper.properties
JavaServer/src/main/java/org/java/server/: JavaServer.java
NodeClient/: compile_times.csv  docker-compose.yaml  index.js  package-lock.json  package.json  resource_log.csv  test.bash
NodeClient/test_data/: 10kb_JSON.json  small_ableton.json
NodeServer/: Dockerfile  docker-compose.yaml  index.js  package-lock.json  package.json  single thread server
RustClient/: Cargo.toml  Dockerfile  compile_times.csv  docker-compose.yaml  test.bash
RustClient/src/: main.rs
RustClient/test_data/: 1500kb_XML.xml  500kb_JSON.json  500kb_XML.xml  50kb_XML.xml
RustServer/: Cargo.toml  Dockerfile  docker-compose.yaml
RustServer/src/: main.rs
