[package]
name = "RustServer"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.6"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
tower = { version = "0.4", features = ["limit", "buffer"] }
tower-http = { version = "0.4", features = ["trace", "limit", "timeout"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
futures = "0.3.31"